fix: fix linkding base secret

--- a/apps/base/linkding/secret.yaml
+++ b/apps/base/linkding/secret.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 data:
-    password: ENC[AES256_GCM,data:qJh+bQ==,iv:xqJqwa7HQh9lKlijoeQ6W10GLXPKPOiNvZcXepn8Lys=,tag:oCDeq83P4bFFF7en16AOJw==,type:str]
-    user: ENC[AES256_GCM,data:6jN0OjcVgwohC6hlvcRr32udRrirms/paPEREQ==,iv:i10rjQnKdgDY4GNnLFHpvrEYBASh0A751ZCQtGupaiI=,tag:Lvya5M8hRpam/qPUfVpkdg==,type:str]
+    user: ENC[AES256_GCM,data:6LMkAKQfr5Q=,iv:9Ci4QaBQfAH6sbyMn/tG35VoE8XSp5qq4L0rQwXC8U0=,tag:Re1P0181hykf4U+D3L6eOA==,type:str]
+    password: ENC[AES256_GCM,data:sDN9lBUEet/KJu769qtxdNtLcDvHcNZm6bK6ng==,iv:T/Jk+I6zrj0Ncb/16WYjZZRF4nUkmYIo6A4zNEs7zwc=,tag:FVOtHZrj8tzacHSsmHvt6Q==,type:str]
 kind: Secret
 metadata:
     creationTimestamp: null
@@ -11,13 +11,13 @@ sops:
         - recipient: age1dsevcxza33vhmq3hn7693jcla2l2peur7shm40pk2dsfuvh2cvus3ut5k5
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBVMTR1RDY0dUxJRVBzN0c1
-            cW9sRkJTTmEzU2ZWMWNOK3hLQXZEQUk4TlZjCitRaE9ZNjNvZGt6bWVHNkxGNkpv
-            eDFNRTBiR0dBYkdRVVV0MC94MlFiVFEKLS0tIHVRN0dndjhMdm4zSTIvb29leGxS
-            UnpIb3V2RVUwRFNkR0QxMEhQZEQ3RFUKLrwlS/QMNfbuaMPiWeYyjmI1wUPl20X4
-            decmGDU9vIDaqosIvGaytW971GJM2djtvgOUY4dypxgpUYnYA8mYOg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBpR3g1VHp5RFNTdHhZcyth
+            MWF0MFEzemdsNmJ4U04yNy93d2lSL2JBMEU0CmNJUXZxck5VQUk4b0gxa1hNYTlW
+            aFNGMmNNYUJLMEJOck9jUXE4U0FJQ1UKLS0tIG4wQ1pheUc0RjFqdHV4QnRCVXFy
+            dThQT3phakpBUXFvU3ZjR0ZiL2dwYzAKzDZbsYQqBHt1o3Dkjen4kHyFvjYEiPCD
+            MN/TlrDNYlk/MAqUoA9raKM4MrDOPm096sNzI4A70EOYFWT/sLr3Eg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-07-04T16:06:23Z"
-    mac: ENC[AES256_GCM,data:TmMq79tPXcysaGQHJrktxYKXUO41QetTr5yoN65TYAOxjUbhTnmteXzIYsEEhrBHRIXPwdHX31c1qKZA724Xkb0HqNNMehGvX8nMjhPrWmCVbz1Gt89JcPEIwsxSx/XsRyo+mg84OEUhus69xgoAsW8f5+LQootNifs1yX4UOZ4=,iv:EgL4zuYbuZ/NynXefV4pps9sjvI3XEgtT/BS9xxP5xM=,tag:ihhn9vvimrIFrjLVJsDS8g==,type:str]
+    lastmodified: "2025-07-04T16:16:17Z"
+    mac: ENC[AES256_GCM,data:VcPgclQRkdjOn/TObHAGz3MOoe7I1rEhbIElJcEYf5QNzwlbUfsmZABdK/19BQC61CIF2QNi3wMBlAeQ2WkEplWZqijBZYZeWoOl9wdU92+v+COrNN+b7GlYoNXrslLqtAr9wtA5hkUX7cuDRvgpr/M8493w7yIHBK3k0jGBjiE=,iv:1Ufsr/6d1ZYU1Y0J/6GP0xYgogfdS3VBFoDsw4Bmy3E=,tag:aTSkagDWKPZ5UzRJVj45Iw==,type:str]
     encrypted_regex: ^(data|stringData)$
     version: 3.10.2
