fix: removing newline from password

--- a/apps/base/linkding/secret.yaml
+++ b/apps/base/linkding/secret.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 data:
-    user: ENC[AES256_GCM,data:6LMkAKQfr5Q=,iv:9Ci4QaBQfAH6sbyMn/tG35VoE8XSp5qq4L0rQwXC8U0=,tag:Re1P0181hykf4U+D3L6eOA==,type:str]
-    password: ENC[AES256_GCM,data:sDN9lBUEet/KJu769qtxdNtLcDvHcNZm6bK6ng==,iv:T/Jk+I6zrj0Ncb/16WYjZZRF4nUkmYIo6A4zNEs7zwc=,tag:FVOtHZrj8tzacHSsmHvt6Q==,type:str]
+    password: ENC[AES256_GCM,data:gKcU2vwPzxd2w9pbE7RRG3/4nQOnH09MfQSOIw==,iv:7lSV8ZQK82XRYXbP1YzPkvnKUESmTGHndcVZIdaeqC0=,tag:tAA49eEuq0m/P7QxhercsQ==,type:str]
+    user: ENC[AES256_GCM,data:Gsl6pwurRmM=,iv:E+YlE4E6MN58tC0Ly2CNWG3IMrbpAqBs8TlljyIckao=,tag:CAVu0jhYynQMwb/4WKGP0g==,type:str]
 kind: Secret
 metadata:
     creationTimestamp: null
@@ -11,13 +11,13 @@ sops:
         - recipient: age1dsevcxza33vhmq3hn7693jcla2l2peur7shm40pk2dsfuvh2cvus3ut5k5
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBpR3g1VHp5RFNTdHhZcyth
-            MWF0MFEzemdsNmJ4U04yNy93d2lSL2JBMEU0CmNJUXZxck5VQUk4b0gxa1hNYTlW
-            aFNGMmNNYUJLMEJOck9jUXE4U0FJQ1UKLS0tIG4wQ1pheUc0RjFqdHV4QnRCVXFy
-            dThQT3phakpBUXFvU3ZjR0ZiL2dwYzAKzDZbsYQqBHt1o3Dkjen4kHyFvjYEiPCD
-            MN/TlrDNYlk/MAqUoA9raKM4MrDOPm096sNzI4A70EOYFWT/sLr3Eg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA1bHdPdTl3M3h4cncyM0RK
+            RDlNOVk3dmlzcUlid0RVQURjME5vcUxhdDNNCnF4RXBpY0krb3p3UFI2L3N5WE5l
+            cW5tejNpell2bThjRWVJbzZncGRWZHMKLS0tIE5KRWFFVmx6Um9kakh3dk1kTGFJ
+            dkZ2aXIxWTMxbWhjYWZ4TnJJYkVHZTgKzKsb3dLArp/Fin7tgDFiRzqWly5575SQ
+            SI79nAi16EeLzP9Ss/fKDkG4ovssQd8prK3YpSbQUddg3Qvy4eFW+w==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-07-04T16:16:17Z"
-    mac: ENC[AES256_GCM,data:VcPgclQRkdjOn/TObHAGz3MOoe7I1rEhbIElJcEYf5QNzwlbUfsmZABdK/19BQC61CIF2QNi3wMBlAeQ2WkEplWZqijBZYZeWoOl9wdU92+v+COrNN+b7GlYoNXrslLqtAr9wtA5hkUX7cuDRvgpr/M8493w7yIHBK3k0jGBjiE=,iv:1Ufsr/6d1ZYU1Y0J/6GP0xYgogfdS3VBFoDsw4Bmy3E=,tag:aTSkagDWKPZ5UzRJVj45Iw==,type:str]
+    lastmodified: "2025-07-04T16:36:01Z"
+    mac: ENC[AES256_GCM,data:a+E4XW86Xq0ZIjCTn38uZcmGbIAwUx+qTv4p/JjjfRXRDJHhX2fZBwPGKn355vMUPRPRlzjt0AdZIlC+f5U9+0a97CMjc5mszw0mWYPV98kj4w5cI0Ln1zyFpHKSkEFgo1iM03sRz+A6KFx6AibSJXmXMOxJN96xQnuo9f1pB1I=,iv:mlNHNerbP4VmSI70aQg6DOxEg4KGCIQ7/JfoQji+GsQ=,tag:Nnl6cxw3BCT7RCyAX6b8Eg==,type:str]
     encrypted_regex: ^(data|stringData)$
     version: 3.10.2
