feat: add an ingress for grafana

--- a/monitoring/controllers/base/kube-prometheus-stack/release.yaml
+++ b/monitoring/controllers/base/kube-prometheus-stack/release.yaml
@@ -29,3 +29,9 @@ spec:
   values:
     grafana:
       adminPassword: siim
+      ingress:
+        enabled: true
+        ingressClassName: traefik
+        hosts:
+          - grafana-staging.colddev.net
+
