--- a/monitoring/controllers/base/kube-prometheus-stack/release.yaml
+++ b/monitoring/controllers/base/kube-prometheus-stack/release.yaml
@@ -34,4 +34,7 @@ spec:
         ingressClassName: traefik
         hosts:
           - grafana-staging.colddev.net
-
+        tls:
+          - secretName: grafana-tls-secret
+            hosts:
+              - grafana-staging.colddev.net
