--- a/apps/base/audiobookshelf/deployment.yaml
+++ b/apps/base/audiobookshelf/deployment.yaml
@@ -13,7 +13,7 @@ spec:
         app: audiobookshelf
     spec:
       containers:
-        - name: linkding
+        - name: audiobookshelf
           image: ghcr.io/advplyr/audiobookshelf:2.25.0
           ports:
             - containerPort: 13378
