feat: add service and configmap for audiobookshelf

--- a/apps/base/audiobookshelf/deployment.yaml
+++ b/apps/base/audiobookshelf/deployment.yaml
@@ -18,6 +18,9 @@ spec:
           ports:
             - containerPort: 80
 
-          env:
-            - name: TZ
-              value: Europe/Tallinn
+          envFrom:
+            # - secretRef:
+            #     name: audiobookshelf-container-env
+            - configMapRef:
+                name: audiobookshelf-configmap
+
