--- a/apps/base/audiobookshelf/deployment.yaml
+++ b/apps/base/audiobookshelf/deployment.yaml
@@ -16,7 +16,8 @@ spec:
         - name: audiobookshelf
           image: ghcr.io/advplyr/audiobookshelf:2.25.1
           ports:
-            - containerPort: 80
+            - containerPort: 3005
+              protocol: TCP
 
           volumeMounts:
             - mountPath: /audiobooks
