feat: add tunnel to audiobookshelf

--- a/apps/base/audiobookshelf/deployment.yaml
+++ b/apps/base/audiobookshelf/deployment.yaml
@@ -34,6 +34,9 @@ spec:
             #     name: audiobookshelf-container-env
             - configMapRef:
                 name: audiobookshelf-configmap
+
+      restartPolicy: Always
+
       volumes:
         - name: audiobookshelf-audiobooks
           persistentVolumeClaim:
