--- a/apps/base/audiobookshelf/deployment.yaml
+++ b/apps/base/audiobookshelf/deployment.yaml
@@ -12,12 +12,20 @@ spec:
       labels:
         app: audiobookshelf
     spec:
+      securityContext:
+        fsGroup: 1000 # node group ID
+        runAsUser: 1000 # node user ID
+        runAsGroup: 1000 # node group ID
+
       containers:
         - name: audiobookshelf
           image: ghcr.io/advplyr/audiobookshelf:2.25.1
           ports:
             - containerPort: 3005
               protocol: TCP
+
+          securityContext:
+            allowPrivilegeEscalation: false
 
           volumeMounts:
             - mountPath: /audiobooks
