--- a/infrastructure/controllers/staging/synology-csi/kustomization.yaml
+++ b/infrastructure/controllers/staging/synology-csi/kustomization.yaml
@@ -1,4 +1,5 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
+namespace: synology-csi
 resources:
-  - namespace.yaml
+  - ../../base/synology-csi/
