--- a/infrastructure/controllers/base/synology-csi/kustomization.yaml
+++ b/infrastructure/controllers/base/synology-csi/kustomization.yaml
@@ -2,3 +2,8 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - namespace.yaml
+  - controller.yaml
+  - csi-driver.yaml
+  - node.yaml
+  - storage-class.yaml
+  - storage-class-retain.yaml
