--- a/infrastructure/controllers/staging/synology-csi/client-info-secret.yaml
+++ b/infrastructure/controllers/staging/synology-csi/client-info-secret.yaml
@@ -1,6 +1,6 @@
 apiVersion: v1
 data:
-    client_info.yaml: ENC[AES256_GCM,data:cq6bZKWBFklulaOtTWILZtDPnCV2KNF3Qto2NxU3hovk5Jn5BQlYEXg+LUv7ef6u1nj2BwzhnbpanRoQXoPvuxN/1gfyM2NMqLVn1EN/xbXJjF5XMBr6RhQPhqpqhyWtfWkNBgjBjUnM0vSO6Bu4E3P9k6zrijvYHRywDvprlnoGAa8POoOfjcuBSf5/FMLJ7iiUWz+GrCrMS/M/GjuWDuWptQCgfbGsYxYcUS3izrs=,iv:RwDnsfyP6XGj0Erts5YX7d6lVAiCKJErWkfTljzoP4I=,tag:0cFAIKx6M3l5z5Ak9u1+4A==,type:str]
+    client_info.yml: ENC[AES256_GCM,data:cq6bZKWBFklulaOtTWILZtDPnCV2KNF3Qto2NxU3hovk5Jn5BQlYEXg+LUv7ef6u1nj2BwzhnbpanRoQXoPvuxN/1gfyM2NMqLVn1EN/xbXJjF5XMBr6RhQPhqpqhyWtfWkNBgjBjUnM0vSO6Bu4E3P9k6zrijvYHRywDvprlnoGAa8POoOfjcuBSf5/FMLJ7iiUWz+GrCrMS/M/GjuWDuWptQCgfbGsYxYcUS3izrs=,iv:RwDnsfyP6XGj0Erts5YX7d6lVAiCKJErWkfTljzoP4I=,tag:0cFAIKx6M3l5z5Ak9u1+4A==,type:str]
 kind: Secret
 metadata:
     creationTimestamp: null
