fix: fixing client-info.yml config file name in secret

--- a/infrastructure/controllers/staging/synology-csi/client-info-secret.yaml
+++ b/infrastructure/controllers/staging/synology-csi/client-info-secret.yaml
@@ -1,6 +1,6 @@
 apiVersion: v1
 data:
-    client_info.yml: ENC[AES256_GCM,data:HOJrcLZ3nLJ79TDbmL/wNAIOIZnuc95qDMSgjZoLjsLU7raclEsv1GTSCNwh0/VRRNAE7yBjYFu7qwiUIfWJdmHLq9j8DIFMkejCNwEg0HHFzPHfkkJHyaeWs9+kIKRcazvxVk1zFgm/KI73zqH0KgiwtCBzGRvyWZzqHaXuAbq2nZYlZjYgCrycIlcTLST10wxJaz3w7oD7PMaVaZlxCkVTMaP5jGI0geX3m3Ist2c=,iv:C9q+2THRKxFZ0YmHr3GepX9IAUP2iYBMR367rmliOv8=,tag:6mYZeMdmhO3G6+PxOmcW6A==,type:str]
+    client-info.yml: ENC[AES256_GCM,data:ZcmAt6SZr8Ad8Ue/O8Rq9HGO5I6ODGo62w5O665HbEMKzhPiEuzCRQMXHGYTVckPZF4sMacC+XzD1v5MK5fr2m6Z216BOC9Oa75mu1XOqon3XHrXA1CUTD3NcNCfoEgGgBiiKKMyl/KDsxGH7RKsDgLdjO5GzC6JNyDAfSgkR/6FA/pXCkpt2D+M9JlNigMb7OOZ8llQyyDQQf7tmCFTrJqhZb2ntMijcn74ccgQebo=,iv:4lP+LS3xVIvdjHXVhtEJsiSyI9ODI1Ro9L7VDM06qM8=,tag:ea09CY+eAWO/rbJtkX6UIA==,type:str]
 kind: Secret
 metadata:
     creationTimestamp: null
@@ -10,13 +10,13 @@ sops:
         - recipient: age1dsevcxza33vhmq3hn7693jcla2l2peur7shm40pk2dsfuvh2cvus3ut5k5
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBsMWJ4aTFxclRzVHUrYWky
-            UWdhMnp1ZDlXTG1FVU5SMVBlbm9rUlR6d0hnCk1yMk9IS016RWZETERWZHg0UFlN
-            eUZOQ2FYVjZjUjNQZkY1TGpJbStNdk0KLS0tICtVL1UraEdqazNkaUV3MWJiMXc2
-            WnZFUk1HYjM2aTdGd1FxcDFVV1BLaTAKJ8up2IP4Rt+uj8dz8z449OU3UMfiQmT4
-            kE+ldufH2Yk/eLYtWMTSJmUtPgzp1o2FMcWsE76NUdLGbiEhRZvIyg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBqcVpjOEhjWWp4RXZOV2Zo
+            enZORWphZkxLUVRXMHpQdXA5Z2NZSnNteEhNCldSeXlFQjBNdzM0NEhUTTg0V1Iv
+            cDdHZVV4eHNacU5ueGtna0hNdy9zSXcKLS0tIFpBSHFmR3hMd2ZDOXFreHRScTU1
+            UVpUOWF1Y2ZEVUNzN1Y3aWZCaTQyL1EK+90V44TH02ImMoT5yQxFyTrWYyuk83S1
+            bZKQU+GwJB/gtK4ybP4Qo9+Cv6pcCaOYSWVU/AXClqbqhuBN0CfY+A==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-07-10T19:50:33Z"
-    mac: ENC[AES256_GCM,data:+y3avKIKOpem9rQV5N463aVgr2mwOtknfLup41yNaW55j/+eZ873XKatFJqcguPki3JO23YgOX3Tp136oLiI2T42TptiIN8c64D9h1fteZ4prPYLEXMRBj6mjHhbCcG9KkTfaayyb8qhCfyeUNo/V5CyZ8XcCGOqzyBjaIKuEoo=,iv:+g35Jd+b3xY5zEGl8ifRnIyaPCIva5MY83vw9R9QCbg=,tag:LG+yQN50Zzq2/PYE8IPKbg==,type:str]
+    lastmodified: "2025-07-10T19:54:03Z"
+    mac: ENC[AES256_GCM,data:eUyMQe5WOsJ2oE6r0ElnR1T6azs73ekyINdwKq8j7v+Fb0b3KyB+Rk46gpbayyWehv6qjhdPXlgypUcEvj9GeeMb3ihJgaKJYCMAQpefRxiPkeNli9lgDcqp2ee1fHK3whUpIHxYkRSluqOuRGLGSqEKhB5l6uWEq9K0huOvB98=,iv:MSKwpHwV4i0Jrls7PtO/PPYg/odAEhHqJcIjKP+F+lQ=,tag:wQkTu//Frwb6sD6ebRyJDg==,type:str]
     encrypted_regex: ^(data|stringData)$
     version: 3.10.2
