--- a/renovate.json
+++ b/renovate.json
@@ -2,5 +2,6 @@
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "kubernetes": {
     "fileMatch": ["\\.yaml$"]
-  }
+  },
+  "ignorePaths": ["infrastructure/controllers/base/synology-csi"]
 }
