--- a/monitoring/controllers/base/kube-prometheus-stack/release.yaml
+++ b/monitoring/controllers/base/kube-prometheus-stack/release.yaml
@@ -38,3 +38,24 @@ spec:
           - secretName: grafana-tls-secret
             hosts:
               - grafana-staging.colddev.net
+
+    sidecar:
+      # datasources:
+      #   enabled: true
+      #   label: grafana_datasource
+      #   labelValue: "1"
+      dashboards:
+        enabled: true
+        label: grafana_dashboard
+        labelValue: "1"
+        # Allow discovery in all namespaces for dashboards
+        searchNamespace: ALL
+        provider:
+          allowUiUpdates: true
+
+    persistence:
+      enabled: true
+      type: pvc
+      accessModes:
+        - ReadWriteOnce
+      size: 4Gi
