fix: set storageClassName for kube prometheus stack

--- a/monitoring/controllers/base/kube-prometheus-stack/release.yaml
+++ b/monitoring/controllers/base/kube-prometheus-stack/release.yaml
@@ -55,6 +55,7 @@ spec:
 
     persistence:
       enabled: true
+      storageClassName: "synology-iscsi"
       type: pvc
       accessModes:
         - ReadWriteOnce
