fix: adding configs to kustomize for kube prometheus stack

--- a/monitoring/controllers/base/kube-prometheus-stack/release.yaml
+++ b/monitoring/controllers/base/kube-prometheus-stack/release.yaml
@@ -40,10 +40,10 @@ spec:
               - grafana-staging.colddev.net
 
       sidecar:
-        datasources:
-          enabled: true
-          label: grafana_datasource
-          labelValue: "1"
+        # datasources:
+        #   enabled: true
+        #   label: grafana_datasource
+        #   labelValue: "1"
         dashboards:
           enabled: true
           label: grafana_dashboard
