fix: add label to podmonitor so kube-prometheus-stack can scrape it

--- a/apps/base/linkding/database.yaml
+++ b/apps/base/linkding/database.yaml
@@ -7,6 +7,8 @@ spec:
 
   monitoring:
     enablePodMonitor: true
+    podMonitorLabels:
+      release: kube-prometheus-stack
 
   storage:
     size: 1Gi
