feat: disable alertmanager

--- a/monitoring/controllers/base/kube-prometheus-stack/release.yaml
+++ b/monitoring/controllers/base/kube-prometheus-stack/release.yaml
@@ -27,6 +27,9 @@ spec:
         target:
           kind: PrometheusRule
   values:
+    alertmanager:
+      enabled: false
+
     prometheus:
       prometheusSpec:
         podMonitorNamespaceSelector:
