--- a/database/base/linkding/database.yaml
+++ b/database/base/linkding/database.yaml
@@ -1,7 +1,7 @@
 apiVersion: postgresql.cnpg.io/v1
 kind: Cluster
 metadata:
-  name: linkding-db-cluster
+  name: linkding-db-staging-cluster-v1
 spec:
   instances: 3
 
