--- a/database/base/rocketchat/namespace.yaml
+++ b/database/base/rocketchat/namespace.yaml
@@ -1,6 +1,6 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: rocketchat
+  name: psmdb-system
   labels:
     app.kubernetes.io/component: monitoring
