--- a/database/base/rocketchat/kustomization.yaml
+++ b/database/base/rocketchat/kustomization.yaml
@@ -1,6 +1,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-namespace: psmdb-system
+namespace: rocketchat
 resources:
   - namespace.yaml
   - database.yaml
