--- a/database/base/rocketchat/database.yaml
+++ b/database/base/rocketchat/database.yaml
@@ -3,6 +3,7 @@ apiVersion: psmdb.percona.com/v1
 kind: PerconaServerMongoDB
 metadata:
   name: rocketchat-db-staging-cluster-v1
+  namespace: rocketchat
 spec:
   crVersion: 1.20.1
   image: percona/percona-server-mongodb:7.0.18-11
@@ -29,7 +30,7 @@ spec:
     enabled: true
 
     configsvrReplSet:
-      size: 1
+      size: 3
       volumeSpec:
         persistentVolumeClaim:
           storageClassName: "synology-iscsi"
