--- a/database/base/rocketchat/database.yaml
+++ b/database/base/rocketchat/database.yaml
@@ -22,7 +22,7 @@ spec:
     size: 3
     volumeSpec:
       persistentVolumeClaim:
-        storageClassName: "synology-iscsi"
+        # storageClassName: "synology-iscsi"
         resources:
           requests:
             storage: 2Gi
@@ -34,7 +34,7 @@ spec:
       size: 3
       volumeSpec:
         persistentVolumeClaim:
-          storageClassName: "synology-iscsi"
+          # storageClassName: "synology-iscsi"
           resources:
             requests:
               storage: 2Gi
