feat: testing mongodb volume expansion

--- a/database/base/rocketchat/database.yaml
+++ b/database/base/rocketchat/database.yaml
@@ -15,6 +15,7 @@ spec:
     schedule: "0 2 * * *"
   secrets:
     users: minimal-cluster
+  enableVolumeExpansion: true
   replsets:
 
   - name: rs0
