feat: disable mongodb sharding

--- a/database/base/rocketchat/database.yaml
+++ b/database/base/rocketchat/database.yaml
@@ -31,7 +31,7 @@ spec:
       antiAffinityTopologyKey: "none" # Needed to deploy in single node
 
   sharding:
-    enabled: true
+    enabled: false
 
     configsvrReplSet:
       size: 3
