--- a/database/base/rocketchat/namespace.yaml
+++ b/database/base/rocketchat/namespace.yaml
@@ -2,5 +2,5 @@ apiVersion: v1
 kind: Namespace
 metadata:
   name: rocketchat
-  # labels:
-  #   app.kubernetes.io/component: monitoring
+  labels:
+    app.kubernetes.io/component: monitoring
