feat: testing pod labels

--- a/database/base/rocketchat/database.yaml
+++ b/database/base/rocketchat/database.yaml
@@ -21,6 +21,10 @@ spec:
 
   - name: rs0
     size: 3
+    expose:
+      labels:
+        app.kubernetes.io/component: monitoring
+
     volumeSpec:
       persistentVolumeClaim:
         storageClassName: "synology-iscsi"
