--- a/database/base/rocketchat/database.yaml
+++ b/database/base/rocketchat/database.yaml
@@ -29,6 +29,28 @@ spec:
             storage: 3Gi
     affinity:
       antiAffinityTopologyKey: "none" # Needed to deploy in single node
+    podTemplate:
+      metadata:
+        annotations:
+          prometheus.io/scrape: "true"
+          prometheus.io/port: "9216"
+          prometheus.io/path: "/metrics"
+      spec:
+        containers:
+        - name: mongodb-exporter
+          image: percona/mongodb_exporter:0.40
+          ports:
+          - containerPort: 9216
+            name: metrics
+          env:
+          - name: MONGODB_URI
+            valueFrom:
+              secretKeyRef:
+                name: minimal-cluster
+                key: MONGODB_DATABASE_ADMIN_USER
+          args:
+          - --mongodb.uri=$(MONGODB_URI)
+          - --web.listen-address=:9216
 
   sharding:
     enabled: false
