--- a/database/base/rocketchat/database.yaml
+++ b/database/base/rocketchat/database.yaml
@@ -20,6 +20,7 @@ spec:
   replsets:
 
   - name: rs0
+
     size: 3
     volumeSpec:
       persistentVolumeClaim:
@@ -29,28 +30,26 @@ spec:
             storage: 3Gi
     affinity:
       antiAffinityTopologyKey: "none" # Needed to deploy in single node
-    podTemplate:
-      metadata:
-        annotations:
-          prometheus.io/scrape: "true"
-          prometheus.io/port: "9216"
-          prometheus.io/path: "/metrics"
-      spec:
-        containers:
-        - name: mongodb-exporter
-          image: percona/mongodb_exporter:0.40
-          ports:
-          - containerPort: 9216
-            name: metrics
-          env:
-          - name: MONGODB_URI
-            valueFrom:
-              secretKeyRef:
-                name: minimal-cluster
-                key: MONGODB_DATABASE_ADMIN_USER
-          args:
-          - --mongodb.uri=$(MONGODB_URI)
-          - --web.listen-address=:9216
+    sidecars:
+    - image: percona/mongodb_exporter:0.44
+      env:
+      - name: EXPORTER_USER
+        valueFrom:
+          secretKeyRef:
+            name: minimal-cluster
+            key: MONGODB_CLUSTER_MONITOR_USER
+      - name: EXPORTER_PASS
+        valueFrom:
+          secretKeyRef:
+            name: minimal-cluster
+            key: MONGODB_CLUSTER_MONITOR_PASSWORD
+      - name: POD_IP
+        valueFrom:
+          fieldRef:
+            fieldPath: status.podIP
+      - name: MONGODB_URI
+        value: "mongodb://$(EXPORTER_USER):$(EXPORTER_PASS)@$(POD_IP):27017"
+      args: ["--discovering-mode", "--compatible-mode", "--collect-all", "--mongodb.uri=$(MONGODB_URI)"]
 
   sharding:
     enabled: false
