feat: testing monitoring label changes

--- a/monitoring/controllers/base/kube-prometheus-stack/release.yaml
+++ b/monitoring/controllers/base/kube-prometheus-stack/release.yaml
@@ -34,8 +34,8 @@ spec:
       prometheusSpec:
         podMonitorNamespaceSelector:
           matchLabels:
-            app.kubernetes.io/component: monitoring
-            app.kubernetes.io/name: percona-server-mongodb
+            - app.kubernetes.io/component: monitoring
+            - app.kubernetes.io/name: percona-server-mongodb
 
         # Discover all PodMonitors, Probes, PrometheusRules and ServiceMonitors
         podMonitorSelectorNilUsesHelmValues: false
