--- a/monitoring/configs/staging/kube-prometheus-stack/kustomization.yaml
+++ b/monitoring/configs/staging/kube-prometheus-stack/kustomization.yaml
@@ -1,6 +1,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: monitoring
-resources:
-  - grafana-tls-secret.yaml
-  - ../../base/dashboards/
+resources: []
+# resources:
+#   - grafana-tls-secret.yaml
+#   - ../../base/dashboards/
