--- a/monitoring/controllers/staging/kube-prometheus-stack/kustomization.yaml
+++ b/monitoring/controllers/staging/kube-prometheus-stack/kustomization.yaml
@@ -1,6 +1,5 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: monitoring
-resources: []
-# resources:
-#   - ../../base/kube-prometheus-stack/
+resources:
+  - ../../base/kube-prometheus-stack/
