test: testing new mongodb dashboard

--- a/monitoring/configs/base/dashboards/kustomization.yaml
+++ b/monitoring/configs/base/dashboards/kustomization.yaml
@@ -5,6 +5,7 @@ configMapGenerator:
   - name: extra-dashboards
     files:
       - extra-dashboards/edb-postgres.json
+      - extra-dashboards/mongodb.json
     options:
       labels:
         grafana_dashboard: "1"
