--- a/monitoring/controllers/base/kube-prometheus-stack/release.yaml
+++ b/monitoring/controllers/base/kube-prometheus-stack/release.yaml
@@ -32,8 +32,8 @@ spec:
 
     prometheus:
       prometheusSpec:
-        hostNetwork: true # Remove once done testing
-        dnsPolicy: ClusterFirstWithHostNet # Remove once done testing
+        # hostNetwork: true # Remove once done testing
+        # dnsPolicy: ClusterFirstWithHostNet # Remove once done testing
         additionalScrapeConfigs:
           - job_name: "prometheus-mock"
             metrics_path: /metrics
