--- a/infrastructure/controllers/base/cert-manager/repository.yaml
+++ b/infrastructure/controllers/base/cert-manager/repository.yaml
@@ -5,5 +5,4 @@ metadata:
   namespace: cert-manager
 spec:
   interval: 24h
-  type: oci
-  url: oci://quay.io/jetstack/charts/
+  url: https://charts.jetstack.io
