fix: rename grafana tls secret

--- a/monitoring/controllers/base/kube-prometheus-stack/release.yaml
+++ b/monitoring/controllers/base/kube-prometheus-stack/release.yaml
@@ -59,7 +59,7 @@ spec:
         hosts:
           - grafana-staging.colddev.net
         tls:
-          - secretName: grafana-tls-secret
+          - secretName: grafana-ca-tls-secret
             hosts:
               - grafana-staging.colddev.net
 
