--- a/monitoring/controllers/staging/kube-prometheus-stack/kustomization.yaml
+++ b/monitoring/controllers/staging/kube-prometheus-stack/kustomization.yaml
@@ -3,4 +3,4 @@ kind: Kustomization
 namespace: monitoring
 resources:
   - ../../base/kube-prometheus-stack/
-  # - grafana-certificate.yaml
+  - grafana-certificate.yaml
