--- a/infrastructure/controllers/production/cert-manager/kustomization.yaml
+++ b/infrastructure/controllers/production/cert-manager/kustomization.yaml
@@ -4,4 +4,4 @@ namespace: cert-manager
 resources:
   - ../../base/cert-manager/
   - colddevnet-ca-secret.yaml
-  - kustomization-clusterissuer.yaml
+  - clusterissuer/
