--- a/infrastructure/controllers/production/cert-manager/kustomization.yaml
+++ b/infrastructure/controllers/production/cert-manager/kustomization.yaml
@@ -1,7 +1,8 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
+metadata:
+  name: cert-manager-helm
 namespace: cert-manager
 resources:
   - ../../base/cert-manager/
   - colddevnet-ca-secret.yaml
-  - clusterissuer/
