--- a/monitoring/controllers/production/kube-prometheus-stack/kustomization.yaml
+++ b/monitoring/controllers/production/kube-prometheus-stack/kustomization.yaml
@@ -3,3 +3,16 @@ kind: Kustomization
 namespace: monitoring
 resources:
   - ../../base/kube-prometheus-stack/
+
+patches:
+  - target:
+      kind: HelmRelease
+      name: kube-prometheus-stack
+      namespace: monitoring
+    patch: |-
+      - op: replace
+        path: /spec/values/grafana/ingress/hosts/0
+        value: grafana-production.colddev.net
+      - op: replace
+        path: /spec/values/grafana/ingress/tls/0/hosts/0
+        value: grafana-production.colddev.net
