fix: fixing typo in secret name

--- a/apps/production/linkding/secret.yaml
+++ b/apps/production/linkding/secret.yaml
@@ -1,23 +1,23 @@
 apiVersion: v1
 data:
-    password: ENC[AES256_GCM,data:hFCR0PDo/izGx6eu5m3GitsmRNWMqTBM37UmwA==,iv:2gWwBcpN8LTFeA7tjb88x+e1xZUh8EUcywO4E0gKt7w=,tag:pxYrwIwjSSya4k7cNH5XpQ==,type:str]
-    user: ENC[AES256_GCM,data:8ahaqStIxaw=,iv:+QuhemEAxO5WpGPfkKtuPqJXWErdH7bY8NCwCBr8X3k=,tag:8dUSzARBNe2Qi3wzFC0P+w==,type:str]
+    password: ENC[AES256_GCM,data:Qom+k5ujL9nmd7VpFelNIK9hBdBRy/WLKsrOSA==,iv:r+YFz8DTl7M3RyZTbhIiqCcx5lziPL8HmSwUeRi+1wg=,tag:E/uk5w9vamlyMbvKpUdORQ==,type:str]
+    user: ENC[AES256_GCM,data:0g9l/LH5l3s=,iv:LPGUDl7bT9yYBc4xQ3UrNb1L9khejA87cHyLDgku7yM=,tag:bXsvqUTsGEJspoeiGrXBjQ==,type:str]
 kind: Secret
 metadata:
     creationTimestamp: null
-    name: linding-secret
+    name: linkding-secret
 sops:
     age:
         - recipient: age1lu89hj3qppwuccx8nn5qq2dkny3kucgud7d4mallc7kw54a6xs7qwwfuez
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBoTDRET29jRkNlYnFOVUVZ
-            VHJQWFJ2bytqaEd6b05ISExzUEZRa1UrTGowCmZ5MmFaODFmcHRxY1VqZ1Qyc010
-            Q3YrQ3UyY0pYVW5PTlRVT3ZzYWRsa0kKLS0tIExsNDNLZ254Lyt2YWcra1ZKZkZX
-            VS85RWFXUkdmdG1mUmRZdjhTL3I0R2MKauFHJV1t+dvFKcbSFaEZdsWG7fikhPsJ
-            x4wi0XeTeCWVkKXHyHRKO7xUdkLr7GspTNAwfdKG/z8DWWTYJRf+kA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAxaUJ6N1g3dGNBakM5cUI4
+            MjJvVWZGM1NhQ0I5WEw4cmd0Q256dUdFeVFZCkNVVTN0d0dRT3RyL0RFNXNGazh3
+            bWZiTDVpNkRTZGJPNWp0TWJOeWZwMUUKLS0tIHVtSUFPTUExNzg3WUpPdXNnQWZa
+            T3lwa3p5N1VPU2lxWG5NT1FvcDB1SDgKeRN4W4OpNWScg0lFgtY//hYe0Q6sAZix
+            MIShZczgZwAeSHwxMy6AFViVrVsrR/IabfZW++6PSxlyU6zlN/mQ/w==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-08-17T20:23:42Z"
-    mac: ENC[AES256_GCM,data:othftdg6ufN6ma4qrodfSsQxvBDt7l94QxcmUj5mVg6W5fBzDeNZh1OMeha6vFBBNGEyXN/gTs3xmXGOudjSZu/NMTOoCaRbV/qenMEKjWqbQdAcfCPw5Q3A/yEvAx9Sg5AvEhVjWgImZVHQdaDYDho251hFXpbfA++xO+5AnRE=,iv:Fw41fZ+JGPAU4ZML1buXGce3oUeb6qrGgjsSuVTeFzE=,tag:UJjaSktb0kXr7bF/1i4fwg==,type:str]
+    lastmodified: "2025-08-17T20:29:22Z"
+    mac: ENC[AES256_GCM,data:gWmFA6xemdVopf52KkaPDLf2FFzsAG4l/jCFdWaY2ioLikwYCGpmVQnpU/nTU4XMlh/MnE8kJsgQWXEJIzO/7xUtwE3kY7/QKJ63Ny6zrbFwRpjWgRFkCbe5DouSgs712u9CyfUW/xKgnAVfpAmVHn4fX7BDqt4uAK/Sap0TkzU=,iv:3UJ2ZylwGiF9sfH+m9QUZ5AUQ02yBZfCmSYTUgea8tY=,tag:phsq13QuFNhK0fZSIwNM6Q==,type:str]
     encrypted_regex: ^(data|stringData)$
     version: 3.10.2
