--- a/monitoring/controllers/base/kube-prometheus-stack/release.yaml
+++ b/monitoring/controllers/base/kube-prometheus-stack/release.yaml
@@ -32,14 +32,12 @@ spec:
 
     prometheus:
       prometheusSpec:
-        # hostNetwork: true # Remove once done testing
-        # dnsPolicy: ClusterFirstWithHostNet # Remove once done testing
-        additionalScrapeConfigs:
-          - job_name: "prometheus-mock"
-            metrics_path: /metrics
-            scrape_interval: 15s
-            static_configs:
-              - targets: ["192.168.88.227:3000"]
+        # additionalScrapeConfigs:
+        #   - job_name: "prometheus-mock"
+        #     metrics_path: /metrics
+        #     scrape_interval: 15s
+        #     static_configs:
+        #       - targets: ["192.168.88.227:3000"]
 
         podMonitorNamespaceSelector:
           matchLabels:
@@ -53,6 +51,8 @@ spec:
 
     grafana:
       adminPassword: siim
+      deploymentStrategy:
+        type: Recreate
       ingress:
         enabled: true
         ingressClassName: traefik
