feat: remove rockerchat dbs and set new user and passwords

--- a/database/base/rocketchat/database.yaml
+++ b/database/base/rocketchat/database.yaml
@@ -19,7 +19,7 @@ spec:
     apply: disabled
     schedule: "0 2 * * *"
   secrets:
-    users: minimal-cluster
+    users: mongodb-database-users
   enableVolumeExpansion: true
   replsets:
 
