--- a/clusters/staging/databases.yaml
+++ b/clusters/staging/databases.yaml
@@ -12,7 +12,7 @@ spec:
     name: flux-system
   path: ./database/staging
   prune: true
-  # decryption:
-  #   provider: sops
-  #   secretRef:
-  #     name: sops-age
+  decryption:
+    provider: sops
+    secretRef:
+      name: sops-age
