fix: remove rocket chat MongoDB and set correct secrets

--- a/database/base/rocketchat/database.yaml
+++ b/database/base/rocketchat/database.yaml
@@ -18,6 +18,8 @@ spec:
   upgradeOptions:
     apply: disabled
     schedule: "0 2 * * *"
+  secrets:
+    users: mongodb-database-users
   enableVolumeExpansion: true
   replsets:
 
