feat: adding staging and prod aws backup credentials for rocketchat

--- a/database/staging/rocketchat/kustomization.yaml
+++ b/database/staging/rocketchat/kustomization.yaml
@@ -3,6 +3,7 @@ kind: Kustomization
 namespace: rocketchat
 resources:
   - ../../base/rocketchat/
+  - aws-backup-credentials.yaml
   - database-users.yaml
 
 patches:
