--- a/database/production/rocketchat/kustomization.yaml
+++ b/database/production/rocketchat/kustomization.yaml
@@ -3,4 +3,5 @@ kind: Kustomization
 namespace: rocketchat
 resources:
   - ../../base/rocketchat/
+  - aws-backup-credentials.yaml
   - database-users.yaml
